# i18n-app

./: .gitignore  .gitlab-ci.yml  .i18n-app.json  Cargo.toml  README.md  _typos.toml  config.toml  install.sh  需求说明.md
.github/workflows/: build.yml
fixtures/: en-US.json  es-ES.json  id-ID.json  ko-KR.json  ms-MY.json  pt-PT.json  th-TH.json  vi-VN.json  zh-CN.json  zh-TW.json  zu-ZA.json
src/: api.rs  cli.rs  config.rs  lib.rs  main.rs  service.rs  translation.rs  update.rs
tests/: integration.rs
