[package]
name = "i18n-app"
version = "0.1.1"
authors = ["Bob <subo@vanelink.net>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "i18n_app"
path = "src/lib.rs"

[[bin]]
name = "i18n-app"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"
config = "0.15"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockito = "1.2"

[[test]]
name = "integration"
path = "tests/integration.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true      # 减小二进制文件大小
