[package]
name = "i18n-app"
version = "0.1.8"
authors = ["Bob <subo@vanelink.net>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "i18n_app"
path = "src/lib.rs"

[[bin]]
name = "i18n-app"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
config = "0.15"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
semver = "1.0.24"
tempfile = "3.8"
indicatif = "0.17"
futures-util = "0.3"
dirs = "5.0.1"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"

[[test]]
name = "integration"
path = "tests/integration.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true      # 减小二进制文件大小
